[gd_scene load_steps=7 format=3 uid="uid://kbrgr2y87fwg"]

[ext_resource type="Script" uid="uid://88r0rwtd0tvu" path="res://scenes/level_manager/level_manager.gd" id="1_2qq6n"]
[ext_resource type="Script" uid="uid://m0ymkojhspfd" path="res://scenes/level_manager/level_selector.gd" id="2_o4nhd"]
[ext_resource type="Texture2D" uid="uid://c7oc08aabg7he" path="res://assets/images/main_image.png" id="3_o4nhd"]
[ext_resource type="FontFile" uid="uid://jm1u1lwmdld4" path="res://assets/fonts/Quick Spooky.otf" id="4_o0qhy"]
[ext_resource type="PackedScene" uid="uid://bf86ybfupobt5" path="res://ui/MenuButton.tscn" id="5_o0qhy"]

[sub_resource type="Theme" id="Theme_kttg4"]

[node name="LevelManager" type="Node"]
script = ExtResource("1_2qq6n")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LevelSelector" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 37.0
offset_top = 282.0
offset_right = 77.0
offset_bottom = 322.0
mouse_default_cursor_shape = 2
script = ExtResource("2_o4nhd")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/LevelSelector"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -151.0
offset_top = -278.0
offset_right = 1122.0
offset_bottom = 706.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_o4nhd")

[node name="Title" type="Label" parent="CanvasLayer/LevelSelector"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 178.0
offset_top = -236.0
offset_right = 615.0
offset_bottom = -172.0
grow_horizontal = 2
theme = SubResource("Theme_kttg4")
theme_override_fonts/font = ExtResource("4_o0qhy")
theme_override_font_sizes/font_size = 53
text = "Proyecto Leviatan"

[node name="BoxContainer" type="BoxContainer" parent="CanvasLayer/LevelSelector"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 342.0
offset_top = -104.0
offset_right = 456.0
offset_bottom = 148.0
grow_vertical = 2

[node name="HBoxContainer" type="VBoxContainer" parent="CanvasLayer/LevelSelector/BoxContainer"]
layout_mode = 2

[node name="New Game" parent="CanvasLayer/LevelSelector/BoxContainer/HBoxContainer" instance=ExtResource("5_o0qhy")]
layout_mode = 2

[node name="Tutorial" parent="CanvasLayer/LevelSelector/BoxContainer/HBoxContainer" instance=ExtResource("5_o0qhy")]
layout_mode = 2
text = "Turorial
"

[node name="Options" parent="CanvasLayer/LevelSelector/BoxContainer/HBoxContainer" instance=ExtResource("5_o0qhy")]
layout_mode = 2
text = "Options
"

[node name="Exit" parent="CanvasLayer/LevelSelector/BoxContainer/HBoxContainer" instance=ExtResource("5_o0qhy")]
layout_mode = 2
text = "Exit
"

[connection signal="pressed" from="CanvasLayer/LevelSelector/BoxContainer/HBoxContainer/Exit" to="." method="_on_exit_pressed"]
